tests/miniJava/neg/005287_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] while ( ) { return 0 ; } }
